src/test/ui/proc-macro/expand-expr.stderr
error: expected one of `.`, `?`, or an operator, found `;`
  --> $DIR/expand-expr.rs:101:27
   |
LL | expand_expr_fail!("string"; hello);
   |                           ^ expected one of `.`, `?`, or an operator

error: expected expression, found `$`
  --> $DIR/expand-expr.rs:104:19
   |
LL | expand_expr_fail!($);
   |                   ^ expected expression

error: expected expression, found `$`
  --> $DIR/expand-expr.rs:33:23
   |
LL |     ($($t:tt)*) => { $($t)* };
   |                       ^^^^ expected expression

error: expected expression, found `$`
  --> $DIR/expand-expr.rs:106:28
   |
LL | expand_expr_fail!(echo_pm!($));
   |                            ^ expected expression

error: macro expansion ignores token `hello` and any following
  --> $DIR/expand-expr.rs:110:47
   |
LL | expand_expr_is!("string", echo_tts!("string"; hello));
   |                           --------------------^^^^^-- help: you might be missing a semicolon here: `;`
   |                           |
   |                           caused by the macro expansion here
   |
   = note: the usage of `echo_tts!` is likely invalid in expression context

error: macro expansion ignores token `;` and any following
  --> $DIR/expand-expr.rs:111:44
   |
LL | expand_expr_is!("string", echo_pm!("string"; hello));
   |                           -----------------^-------- help: you might be missing a semicolon here: `;`
   |                           |
   |                           caused by the macro expansion here
   |
   = note: the usage of `echo_pm!` is likely invalid in expression context

error: recursion limit reached while expanding `recursive_expand!`
  --> $DIR/expand-expr.rs:119:16
   |
LL | const _: u32 = recursive_expand!();
   |                ^^^^^^^^^^^^^^^^^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`expand_expr`)
   = note: this error originates in the macro `recursive_expand` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 7 previous errors

